tests/NormalTests/paczka1/fuzzy1/33158074.err
Error in line 3: S140 A856 92,2
Error in line 12: tUKxJI2R0 S140 54,6
Error in line 18: 1ZE A856 75,6
Error in line 22: jynPDaTanr S821 47,1
Error in line 19: tUKxJI2R0 S821 71,2
Error in line 26: jynPDaTanr A856 19,3
Error in line 29: jynPDaTanr S821 10,7
Error in line 15: 1jWczUcEi5 S821 95,6
Error in line 27: tUKxJI2R0 S521 32,7
